--- a/logging.conf
+++ b/logging.conf
@@ -15,7 +15,7 @@ handlers=stream_handler
 class=StreamHandler
 level=INFO
 formatter=formatter
-args=(sys.stderr,)
+args=(sys.stdout,)
 
 [formatter_formatter]
 format=%(asctime)s - %(levelname)s - %(message)s
