Implement non-tree CMH calculation
Fast, non-recursive, NumPy oriented calculation following tracks has
been implemented.  Non-central progenitors still need to be excluded
from the CMH - post-processing?

--- a/log.conf
+++ b/log.conf
@@ -18,5 +18,4 @@ formatter=formatter
 args=(sys.stdout,)
 
 [formatter_formatter]
-format=%(asctime)s - %(levelname)s - %(message)s
-datefmt=
+format=%(levelname)s - %(message)s
