Cleanup after FLAT
All data generation scriipts, for all snaphots and gravities, are now in
place.  Testing for bin sizes, fitting routines and halo selection is
needed (see #21).

--- a/src/hbtp/makefile
+++ b/src/hbtp/makefile
@@ -1,6 +1,6 @@
 SRC:=./src/hbtp
-OUT:=./output/hbtp
-SNAP:=051
+OUT:=./output
+SNAP:=122
 IDS:=$(shell more $(OUT)/ids-$(SNAP).txt)
 
 ids: $(OUT)/ids-$(SNAP).txt
