Fix CI documentation problems
- pip now installs from requirements
- YAML logging config is read from abspath (hack)

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,7 @@ image: python:alpine
 
 pages:
   script:
-    - pip install sphinx sphinxcontrib-napoleon sphinxcontrib-websupport
+    - pip install -r requirements.txt
     - apk --no-cache add make
     - cd docs; make html
     - mv build/html ../public/
