--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,9 +1,10 @@
-image: python:alpine
+image: python:3.6.5-slim
 
 pages:
   script:
+    - apt-get update
+    - apt-get install -y make
     - pip install -r requirements.txt
-    - apk --no-cache add make
     - cd docs; make html
     - mv build/html ../public/
   artifacts:
